implemented the Approve Requests page
