# src/app/components/user-management/approve-requests/approve-requests.component.ts
@@ -1,20 +1,37 @@
-import { Component, OnInit, ViewChild, Input } from '@angular/core';
+import { Component, ViewChild, OnInit } from '@angular/core';
+import { Request } from '../../../services/request';
 
 // Other Components
 import { HeaderComponent } from '../../../components/header/header.component';
+import { Injectables } from '../../../services/injectables';
 
 @Component({
   selector: 'approve-requests',
   templateUrl: './approve-requests.component.html',
   styleUrls: ['./approve-requests.component.scss']
 })
-export class ApproveRequestsComponent implements OnInit {
+export class ApproveRequestsComponent {
 
-  @ViewChild(HeaderComponent) header;
+  @ViewChild(HeaderComponent) header: HeaderComponent;
+  messageIsHidden: boolean = true;
 
-  constructor() { }
+  constructor(injectables: Injectables){} // initilizes the static members on the class Injectables
 
-  ngOnInit() {
-
+  async approve(request: Request) {
+    await request.approve();
+    this.flashMessage()
+    this.header.ngOnInit();
   }
+
+  async deny(request: Request) {
+    await request.deny();
+    this.flashMessage()
+    this.header.ngOnInit();
+  }
+
+  private flashMessage() {
+    this.messageIsHidden = false;
+    setInterval(() => this.messageIsHidden = true, 5000);
+  }
+
 }
